--- a/note/definition.html
+++ b/note/definition.html
@@ -50,9 +50,6 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </div>
 <div class="side-ad-container"></div>
@@ -68,10 +65,10 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org10d0f78">대충 사용하는 의미</a></li>
-<li><a href="#org6023075">구세대 언어의 예</a></li>
-<li><a href="#org3f4d3eb">현대적인 언어의 예</a></li>
-<li><a href="#org7220681">결론</a></li>
+<li><a href="#orge2ecf3a">대충 사용하는 의미</a></li>
+<li><a href="#orgb19efa9">구세대 언어의 예</a></li>
+<li><a href="#org15a36b0">현대적인 언어의 예</a></li>
+<li><a href="#orgfe24929">결론</a></li>
 </ul>
 </div>
 </div>
@@ -80,9 +77,9 @@
 IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(definition) 개념을 다룬다.
 </p>
 
-<div id="outline-container-org10d0f78" class="outline-2">
-<h2 id="org10d0f78">대충 사용하는 의미</h2>
-<div class="outline-text-2" id="text-org10d0f78">
+<div id="outline-container-orge2ecf3a" class="outline-2">
+<h2 id="orge2ecf3a">대충 사용하는 의미</h2>
+<div class="outline-text-2" id="text-orge2ecf3a">
 <blockquote>
 <p>
 정의하다 = 코딩하다
@@ -98,9 +95,9 @@ IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(defini
 </p>
 </div>
 </div>
-<div id="outline-container-org6023075" class="outline-2">
-<h2 id="org6023075">구세대 언어의 예</h2>
-<div class="outline-text-2" id="text-org6023075">
+<div id="outline-container-orgb19efa9" class="outline-2">
+<h2 id="orgb19efa9">구세대 언어의 예</h2>
+<div class="outline-text-2" id="text-orgb19efa9">
 <p>
 예를 들어 C 언어의 경우 정의는 아래와 같은 식이다.
 </p>
@@ -137,9 +134,9 @@ IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(defini
 </p>
 </div>
 </div>
-<div id="outline-container-org3f4d3eb" class="outline-2">
-<h2 id="org3f4d3eb">현대적인 언어의 예</h2>
-<div class="outline-text-2" id="text-org3f4d3eb">
+<div id="outline-container-org15a36b0" class="outline-2">
+<h2 id="org15a36b0">현대적인 언어의 예</h2>
+<div class="outline-text-2" id="text-org15a36b0">
 <p>
 예를 들어 <a href="swift.html">Swift</a>로 구조체를 정의하는 방법을 보자.
 </p>
@@ -170,9 +167,9 @@ IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(defini
 </p>
 </div>
 </div>
-<div id="outline-container-org7220681" class="outline-2">
-<h2 id="org7220681">결론</h2>
-<div class="outline-text-2" id="text-org7220681">
+<div id="outline-container-orgfe24929" class="outline-2">
+<h2 id="orgfe24929">결론</h2>
+<div class="outline-text-2" id="text-orgfe24929">
 <blockquote>
 <p>
 정의와 구현은 일단은 다르다.
@@ -190,9 +187,6 @@ IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(defini
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
@@ -219,9 +213,6 @@ IT 개발과 관련해서 어떤 의미를 정할 때 사용하는 정의(defini
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </div>
 <div class="content-container">
@@ -241,5 +232,10 @@ gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  var elements = document.getElementsByClassName('adsbygoogle');
+  Array.prototype.forEach.call(elements, function(e) {
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  })</script>
 </body>
 </html>
