--- a/note/fcpx.html
+++ b/note/fcpx.html
@@ -50,9 +50,6 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </div>
 <div class="side-ad-container"></div>
@@ -68,12 +65,12 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orga9bd02d">단축키</a>
+<li><a href="#org50682b6">단축키</a>
 <ul>
-<li><a href="#org0cb8e05">프로젝트(Project)</a></li>
-<li><a href="#orgb95f4e8">클립 브라우저(Clip Browser)</a></li>
-<li><a href="#orge100aa1">타임라인(Timeline)</a></li>
-<li><a href="#org91be2c7">플레이(Play or Preview)</a></li>
+<li><a href="#org2ab863b">프로젝트(Project)</a></li>
+<li><a href="#orgd79645b">클립 브라우저(Clip Browser)</a></li>
+<li><a href="#org496eea6">타임라인(Timeline)</a></li>
+<li><a href="#orge755c97">플레이(Play or Preview)</a></li>
 </ul>
 </li>
 </ul>
@@ -85,13 +82,13 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 자매 소프트웨어로 <a href="motion.html">Motion</a>과 Compressor가 있다.
 </p>
 
-<div id="outline-container-orga9bd02d" class="outline-2">
-<h2 id="orga9bd02d">단축키</h2>
-<div class="outline-text-2" id="text-orga9bd02d">
+<div id="outline-container-org50682b6" class="outline-2">
+<h2 id="org50682b6">단축키</h2>
+<div class="outline-text-2" id="text-org50682b6">
 </div>
-<div id="outline-container-org0cb8e05" class="outline-3">
-<h3 id="org0cb8e05">프로젝트(Project)</h3>
-<div class="outline-text-3" id="text-org0cb8e05">
+<div id="outline-container-org2ab863b" class="outline-3">
+<h3 id="org2ab863b">프로젝트(Project)</h3>
+<div class="outline-text-3" id="text-org2ab863b">
 <dl class="org-dl">
 <dt><code>Option N</code></dt><dd>New Event</dd>
 <dt><code>Command N</code></dt><dd>New Project</dd>
@@ -100,9 +97,9 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </dl>
 </div>
 </div>
-<div id="outline-container-orgb95f4e8" class="outline-3">
-<h3 id="orgb95f4e8">클립 브라우저(Clip Browser)</h3>
-<div class="outline-text-3" id="text-orgb95f4e8">
+<div id="outline-container-orgd79645b" class="outline-3">
+<h3 id="orgd79645b">클립 브라우저(Clip Browser)</h3>
+<div class="outline-text-3" id="text-orgd79645b">
 <dl class="org-dl">
 <dt><code>Command +</code></dt><dd>Zoom In</dd>
 <dt><code>Command -</code></dt><dd>Zoom Out</dd>
@@ -117,9 +114,9 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </dl>
 </div>
 </div>
-<div id="outline-container-orge100aa1" class="outline-3">
-<h3 id="orge100aa1">타임라인(Timeline)</h3>
-<div class="outline-text-3" id="text-orge100aa1">
+<div id="outline-container-org496eea6" class="outline-3">
+<h3 id="org496eea6">타임라인(Timeline)</h3>
+<div class="outline-text-3" id="text-org496eea6">
 <dl class="org-dl">
 <dt><code>Shift Z</code></dt><dd>타임라인 전체가 가득 차게 확대 혹은 축소</dd>
 <dt><code>Command +</code></dt><dd>확대(Zoom In)</dd>
@@ -144,9 +141,9 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </dl>
 </div>
 </div>
-<div id="outline-container-org91be2c7" class="outline-3">
-<h3 id="org91be2c7">플레이(Play or Preview)</h3>
-<div class="outline-text-3" id="text-org91be2c7">
+<div id="outline-container-orge755c97" class="outline-3">
+<h3 id="orge755c97">플레이(Play or Preview)</h3>
+<div class="outline-text-3" id="text-orge755c97">
 <dl class="org-dl">
 <dt><code>Space</code></dt><dd>플레이</dd>
 <dt><code>L</code></dt><dd>플레이 및 속도 증가</dd>
@@ -163,9 +160,6 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
@@ -185,9 +179,6 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </div>
 <div class="content-container">
@@ -207,5 +198,10 @@ gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  var elements = document.getElementsByClassName('adsbygoogle');
+  Array.prototype.forEach.call(elements, function(e) {
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  })</script>
 </body>
 </html>
