--- a/note/gitignore.html
+++ b/note/gitignore.html
@@ -50,9 +50,6 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </div>
 <div class="side-ad-container"></div>
@@ -68,20 +65,20 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org8d6d27c">.gitignore</a></li>
-<li><a href="#org48f6bc7">gitignore.io</a>
+<li><a href="#org82da045">.gitignore</a></li>
+<li><a href="#orgeac9ce4">gitignore.io</a>
 <ul>
-<li><a href="#orgb6d378f">사용법</a></li>
-<li><a href="#org365c6ad">Command Line</a></li>
+<li><a href="#org9999254">사용법</a></li>
+<li><a href="#org3ca0a70">Command Line</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org8d6d27c" class="outline-2">
-<h2 id="org8d6d27c">.gitignore</h2>
-<div class="outline-text-2" id="text-org8d6d27c">
+<div id="outline-container-org82da045" class="outline-2">
+<h2 id="org82da045">.gitignore</h2>
+<div class="outline-text-2" id="text-org82da045">
 <p>
 <code>.gitignore</code> 파일은 <a href="git.html">Git</a>에서 저장소로 관리하지 않을 파일이나 디렉터리 패턴을 정리하는 파일이다.
 주로 프로젝트 루트 디렉터리에 위치하지만 필요하다면 각 하부 디렉터리에도 생성할 수 있다.
@@ -118,9 +115,9 @@ env/
 </div>
 </div>
 </div>
-<div id="outline-container-org48f6bc7" class="outline-2">
-<h2 id="org48f6bc7">gitignore.io</h2>
-<div class="outline-text-2" id="text-org48f6bc7">
+<div id="outline-container-orgeac9ce4" class="outline-2">
+<h2 id="orgeac9ce4">gitignore.io</h2>
+<div class="outline-text-2" id="text-orgeac9ce4">
 <p>
 <a target="_blank" href="https://www.gitignore.io/">🌏gitignore.io</a>라는 사이트는 프로젝트나 언어 등 몇 가지 기준으로
 자주 쓰이는 <code>.gitignore</code> 목록을 생성해 주는 서비스다.
@@ -129,18 +126,18 @@ env/
 gitignore.io 서비스는 이럴 때 딱 쓰기 좋은 서비스다.
 </p>
 </div>
-<div id="outline-container-orgb6d378f" class="outline-3">
-<h3 id="orgb6d378f">사용법</h3>
-<div class="outline-text-3" id="text-orgb6d378f">
+<div id="outline-container-org9999254" class="outline-3">
+<h3 id="org9999254">사용법</h3>
+<div class="outline-text-3" id="text-org9999254">
 <p>
 사용 방법은 사이트 중앙의 텍스트 필드에 언어나 프로젝트 이름을 써 넣고 Create 버튼을 누르면 된다.
 그 후 나오는 내용을 <code>.gitignore</code> 파일에 그대로 쓰면 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-org365c6ad" class="outline-3">
-<h3 id="org365c6ad">Command Line</h3>
-<div class="outline-text-3" id="text-org365c6ad">
+<div id="outline-container-org3ca0a70" class="outline-3">
+<h3 id="org3ca0a70">Command Line</h3>
+<div class="outline-text-3" id="text-org3ca0a70">
 <p>
 일반적인 웹 사이트인 줄 알았는데 약간 특수한 트윅으로 <a href="cli.html">CLI</a> 도구가 제공된다.
 정확히 말해서 <a href="shell.html">셸</a> 함수를 초기화 파일에 쓰는 형태로 설정해서 사용하는 도구다.
@@ -172,9 +169,6 @@ gitignore.io 서비스는 이럴 때 딱 쓰기 좋은 서비스다.
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </section>
 <div class="side-ad-container">
@@ -184,9 +178,6 @@ gitignore.io 서비스는 이럴 때 딱 쓰기 좋은 서비스다.
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </div>
 <div class="content-container">
@@ -206,5 +197,10 @@ gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  var elements = document.getElementsByClassName('adsbygoogle');
+  Array.prototype.forEach.call(elements, function(e) {
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  })</script>
 </body>
 </html>
