--- a/note/grep.html
+++ b/note/grep.html
@@ -50,9 +50,6 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </div>
 <div class="side-ad-container"></div>
@@ -68,16 +65,16 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org64ee0f8">기본 사용법</a></li>
-<li><a href="#org833a47b">대소문자 무시</a></li>
-<li><a href="#org666c432">바이너리(Binary) 파일 무시하기</a></li>
-<li><a href="#orgd245702">재귀(Recursive) 검색</a></li>
-<li><a href="#org4e480af">검색된 파일 이름만 보기</a></li>
-<li><a href="#orgac9fb22">단어만 검색하기</a></li>
-<li><a href="#orge3eaefb">줄 번호(Line Number) 보기</a></li>
-<li><a href="#org318fdd4">발견 개수 보기</a></li>
-<li><a href="#org09d8b1b">검색되지 않는 것만 보기</a></li>
-<li><a href="#org898b8ad">정규표현식</a></li>
+<li><a href="#org15ce38a">기본 사용법</a></li>
+<li><a href="#orgf8b03f3">대소문자 무시</a></li>
+<li><a href="#orgcb81d2c">바이너리(Binary) 파일 무시하기</a></li>
+<li><a href="#org7c6bd06">재귀(Recursive) 검색</a></li>
+<li><a href="#org51905c5">검색된 파일 이름만 보기</a></li>
+<li><a href="#org66fd359">단어만 검색하기</a></li>
+<li><a href="#orgb6ad8c6">줄 번호(Line Number) 보기</a></li>
+<li><a href="#orgbdd4c83">발견 개수 보기</a></li>
+<li><a href="#org5167c78">검색되지 않는 것만 보기</a></li>
+<li><a href="#org2982f2b">정규표현식</a></li>
 </ul>
 </div>
 </div>
@@ -85,9 +82,9 @@
 Grep은 파일이나 텍스트에서 특정 텍스트를 검색하는 데 사용되는 *NIX <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-org64ee0f8" class="outline-2">
-<h2 id="org64ee0f8">기본 사용법</h2>
-<div class="outline-text-2" id="text-org64ee0f8">
+<div id="outline-container-org15ce38a" class="outline-2">
+<h2 id="org15ce38a">기본 사용법</h2>
+<div class="outline-text-2" id="text-org15ce38a">
 <p>
 기본적으로는 텍스트 파일에서 문자열을 검색하는 것을 생각할 수 있다.
 </p>
@@ -114,9 +111,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-org833a47b" class="outline-2">
-<h2 id="org833a47b">대소문자 무시</h2>
-<div class="outline-text-2" id="text-org833a47b">
+<div id="outline-container-orgf8b03f3" class="outline-2">
+<h2 id="orgf8b03f3">대소문자 무시</h2>
+<div class="outline-text-2" id="text-orgf8b03f3">
 <p>
 <code>-i</code> 옵션을 사용하면 대소문자를 가리지 않고 검색한다.
 </p>
@@ -126,9 +123,9 @@ this is sample
 </div>
 </div>
 </div>
-<div id="outline-container-org666c432" class="outline-2">
-<h2 id="org666c432">바이너리(Binary) 파일 무시하기</h2>
-<div class="outline-text-2" id="text-org666c432">
+<div id="outline-container-orgcb81d2c" class="outline-2">
+<h2 id="orgcb81d2c">바이너리(Binary) 파일 무시하기</h2>
+<div class="outline-text-2" id="text-orgcb81d2c">
 <p>
 가끔 이진 파일에서 검색하느라 느려지거나 이상한 것을 검색하기도 하는데, 이를 때는 <code>-I</code> 옵션을 사용할 수 있다.
 </p>
@@ -138,9 +135,9 @@ this is sample
 </div>
 </div>
 </div>
-<div id="outline-container-orgd245702" class="outline-2">
-<h2 id="orgd245702">재귀(Recursive) 검색</h2>
-<div class="outline-text-2" id="text-orgd245702">
+<div id="outline-container-org7c6bd06" class="outline-2">
+<h2 id="org7c6bd06">재귀(Recursive) 검색</h2>
+<div class="outline-text-2" id="text-org7c6bd06">
 <p>
 재귀 검색이란 하위 디렉터리를 모두 다 뒤져본다는 의미다.
 </p>
@@ -166,9 +163,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-org4e480af" class="outline-2">
-<h2 id="org4e480af">검색된 파일 이름만 보기</h2>
-<div class="outline-text-2" id="text-org4e480af">
+<div id="outline-container-org51905c5" class="outline-2">
+<h2 id="org51905c5">검색된 파일 이름만 보기</h2>
+<div class="outline-text-2" id="text-org51905c5">
 <p>
 <code>-l</code> 옵션은 발견된 패턴을 화면에 표시하지 않게 한다.
 </p>
@@ -183,9 +180,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-orgac9fb22" class="outline-2">
-<h2 id="orgac9fb22">단어만 검색하기</h2>
-<div class="outline-text-2" id="text-orgac9fb22">
+<div id="outline-container-org66fd359" class="outline-2">
+<h2 id="org66fd359">단어만 검색하기</h2>
+<div class="outline-text-2" id="text-org66fd359">
 <p>
 단어 단위 검색을 하기 위해서 <code>-w</code> 옵션을 사용할 수 있다.
 </p>
@@ -198,9 +195,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-orge3eaefb" class="outline-2">
-<h2 id="orge3eaefb">줄 번호(Line Number) 보기</h2>
-<div class="outline-text-2" id="text-orge3eaefb">
+<div id="outline-container-orgb6ad8c6" class="outline-2">
+<h2 id="orgb6ad8c6">줄 번호(Line Number) 보기</h2>
+<div class="outline-text-2" id="text-orgb6ad8c6">
 <p>
 <code>-n</code> 옵션을 이용해 줄 번호를 표시할 수 있다.
 </p>
@@ -213,9 +210,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-org318fdd4" class="outline-2">
-<h2 id="org318fdd4">발견 개수 보기</h2>
-<div class="outline-text-2" id="text-org318fdd4">
+<div id="outline-container-orgbdd4c83" class="outline-2">
+<h2 id="orgbdd4c83">발견 개수 보기</h2>
+<div class="outline-text-2" id="text-orgbdd4c83">
 <p>
 <code>-c</code> 옵션을 주면 발견된 개수(count)를 구할 수 있다.
 </p>
@@ -228,9 +225,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-org09d8b1b" class="outline-2">
-<h2 id="org09d8b1b">검색되지 않는 것만 보기</h2>
-<div class="outline-text-2" id="text-org09d8b1b">
+<div id="outline-container-org5167c78" class="outline-2">
+<h2 id="org5167c78">검색되지 않는 것만 보기</h2>
+<div class="outline-text-2" id="text-org5167c78">
 <p>
 <code>-v</code> 옵션을 주면 검색되지 않는 라인을 화면에 표시한다.
 </p>
@@ -243,9 +240,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-org898b8ad" class="outline-2">
-<h2 id="org898b8ad">정규표현식</h2>
-<div class="outline-text-2" id="text-org898b8ad">
+<div id="outline-container-org2982f2b" class="outline-2">
+<h2 id="org2982f2b">정규표현식</h2>
+<div class="outline-text-2" id="text-org2982f2b">
 <p>
 원래 정규표현식이 지원되지 때문에 그냥 써도 된다.
 </p>
@@ -272,9 +269,6 @@ this is sample
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </section>
 <div class="side-ad-container">
@@ -284,9 +278,6 @@ this is sample
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </div>
 <div class="content-container">
@@ -306,5 +297,10 @@ gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  var elements = document.getElementsByClassName('adsbygoogle');
+  Array.prototype.forEach.call(elements, function(e) {
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  })</script>
 </body>
 </html>
