--- a/note/motion.html
+++ b/note/motion.html
@@ -50,9 +50,6 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </div>
 <div class="side-ad-container"></div>
@@ -68,15 +65,15 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org0714a04">단축키</a></li>
-<li><a href="#org5fe4ddd">팁</a>
+<li><a href="#org40bf6b1">단축키</a></li>
+<li><a href="#org0cef87a">팁</a>
 <ul>
-<li><a href="#orgd987f2a">효과 적용 시간 보장하기</a></li>
+<li><a href="#org2087acf">효과 적용 시간 보장하기</a></li>
 </ul>
 </li>
-<li><a href="#org7f3b72d">기타</a>
+<li><a href="#orgddc8a06">기타</a>
 <ul>
-<li><a href="#orge8e0c40">한글 폰트가 폰트 목록에 나타나지 않을 때</a></li>
+<li><a href="#orgc7d7902">한글 폰트가 폰트 목록에 나타나지 않을 때</a></li>
 </ul>
 </li>
 </ul>
@@ -92,9 +89,9 @@
 그래서 혹자는 "<a href="fcpx.html">Final Cut Pro X</a>과 모션을 같이 써야 완전체다" 라고 말하기도 한다.
 </p>
 
-<div id="outline-container-org0714a04" class="outline-2">
-<h2 id="org0714a04">단축키</h2>
-<div class="outline-text-2" id="text-org0714a04">
+<div id="outline-container-org40bf6b1" class="outline-2">
+<h2 id="org40bf6b1">단축키</h2>
+<div class="outline-text-2" id="text-org40bf6b1">
 <dl class="org-dl">
 <dt><code>Command D</code></dt><dd>복제(Duplicate)</dd>
 <dt><code>Shift M</code></dt><dd>마커(Marker)</dd>
@@ -102,13 +99,13 @@
 </dl>
 </div>
 </div>
-<div id="outline-container-org5fe4ddd" class="outline-2">
-<h2 id="org5fe4ddd">팁</h2>
-<div class="outline-text-2" id="text-org5fe4ddd">
+<div id="outline-container-org0cef87a" class="outline-2">
+<h2 id="org0cef87a">팁</h2>
+<div class="outline-text-2" id="text-org0cef87a">
 </div>
-<div id="outline-container-orgd987f2a" class="outline-3">
-<h3 id="orgd987f2a">효과 적용 시간 보장하기</h3>
-<div class="outline-text-3" id="text-orgd987f2a">
+<div id="outline-container-org2087acf" class="outline-3">
+<h3 id="org2087acf">효과 적용 시간 보장하기</h3>
+<div class="outline-text-3" id="text-org2087acf">
 <p>
 타이틀 템플릿은 프로젝트 기본 설정과는 다르게 마음껏 늘여서 쓸 수도 있다.
 이럴 경우 애니메이션 등의 효과도 같이 늘어나게 되는데, 이 애니메이션 시간을 원래 프로젝트에서 만든 시간으로 보정할 수 있다.
@@ -126,13 +123,13 @@
 </div>
 </div>
 </div>
-<div id="outline-container-org7f3b72d" class="outline-2">
-<h2 id="org7f3b72d">기타</h2>
-<div class="outline-text-2" id="text-org7f3b72d">
+<div id="outline-container-orgddc8a06" class="outline-2">
+<h2 id="orgddc8a06">기타</h2>
+<div class="outline-text-2" id="text-orgddc8a06">
 </div>
-<div id="outline-container-orge8e0c40" class="outline-3">
-<h3 id="orge8e0c40">한글 폰트가 폰트 목록에 나타나지 않을 때</h3>
-<div class="outline-text-3" id="text-orge8e0c40">
+<div id="outline-container-orgc7d7902" class="outline-3">
+<h3 id="orgc7d7902">한글 폰트가 폰트 목록에 나타나지 않을 때</h3>
+<div class="outline-text-3" id="text-orgc7d7902">
 <p>
 아직 버그인지 모르겠지만, <a href="macos.html">macOS</a>를 한국어로 설정해서 사용하는 경우
 한글로 된 폰트가 폰트 목록에서 누락되는 경우가 있다.
@@ -149,9 +146,6 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
@@ -171,9 +165,6 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </div>
 <div class="content-container">
@@ -193,5 +184,10 @@ gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  var elements = document.getElementsByClassName('adsbygoogle');
+  Array.prototype.forEach.call(elements, function(e) {
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  })</script>
 </body>
 </html>
