--- a/note/caffeinate.html
+++ b/note/caffeinate.html
@@ -50,9 +50,6 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </div>
 <div class="side-ad-container"></div>
@@ -68,11 +65,11 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org831b011">사용법</a>
+<li><a href="#org308fc8d">사용법</a>
 <ul>
-<li><a href="#org7b66cb7">무제한 잠자기 방지</a></li>
-<li><a href="#org122d802">지정된 시간 동안 잠자기 방지</a></li>
-<li><a href="#org835c4e6">특정 프로세스 구동 동안 잠자기 방지</a></li>
+<li><a href="#org9e49c53">무제한 잠자기 방지</a></li>
+<li><a href="#org4f22633">지정된 시간 동안 잠자기 방지</a></li>
+<li><a href="#orgf3bd9f3">특정 프로세스 구동 동안 잠자기 방지</a></li>
 </ul>
 </li>
 </ul>
@@ -83,13 +80,13 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 <a href="macos.html">macOS</a> 전용 <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-org831b011" class="outline-2">
-<h2 id="org831b011">사용법</h2>
-<div class="outline-text-2" id="text-org831b011">
+<div id="outline-container-org308fc8d" class="outline-2">
+<h2 id="org308fc8d">사용법</h2>
+<div class="outline-text-2" id="text-org308fc8d">
 </div>
-<div id="outline-container-org7b66cb7" class="outline-3">
-<h3 id="org7b66cb7">무제한 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org7b66cb7">
+<div id="outline-container-org9e49c53" class="outline-3">
+<h3 id="org9e49c53">무제한 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org9e49c53">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate
 </pre>
@@ -100,9 +97,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-org122d802" class="outline-3">
-<h3 id="org122d802">지정된 시간 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org122d802">
+<div id="outline-container-org4f22633" class="outline-3">
+<h3 id="org4f22633">지정된 시간 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org4f22633">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -t <span style="color: #da8548; font-weight: bold;">3600</span>
 </pre>
@@ -113,9 +110,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-org835c4e6" class="outline-3">
-<h3 id="org835c4e6">특정 프로세스 구동 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org835c4e6">
+<div id="outline-container-orgf3bd9f3" class="outline-3">
+<h3 id="orgf3bd9f3">특정 프로세스 구동 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-orgf3bd9f3">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -i <span style="color: #ECBE7B;">make</span>
 </pre>
@@ -133,9 +130,6 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </section>
 <div class="side-ad-container">
@@ -145,9 +139,6 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </div>
 <div class="content-container">
@@ -167,5 +158,10 @@ gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  var elements = document.getElementsByClassName('adsbygoogle');
+  Array.prototype.forEach.call(elements, function(e) {
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  })</script>
 </body>
 </html>
