--- a/note/dockerfile.html
+++ b/note/dockerfile.html
@@ -50,9 +50,6 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </div>
 <div class="side-ad-container"></div>
@@ -68,10 +65,10 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org345b1d6">평범한 스펙 예제</a></li>
-<li><a href="#org80aab55">사용자 지정</a></li>
-<li><a href="#org6cf2273">Health Checking</a></li>
-<li><a href="#org8e76e5e">Multi Stage Building</a></li>
+<li><a href="#org37b403a">평범한 스펙 예제</a></li>
+<li><a href="#orga3c1640">사용자 지정</a></li>
+<li><a href="#orge9ca183">Health Checking</a></li>
+<li><a href="#orgdb52d6f">Multi Stage Building</a></li>
 </ul>
 </div>
 </div>
@@ -80,9 +77,9 @@ Dockerfile은 <a href="docker.html">Docker</a> 용 이미지를 빌드하기 위
 특수한 DSL 스크립트 언어로 작성하는 스펙 파일이다.
 </p>
 
-<div id="outline-container-org345b1d6" class="outline-2">
-<h2 id="org345b1d6">평범한 스펙 예제</h2>
-<div class="outline-text-2" id="text-org345b1d6">
+<div id="outline-container-org37b403a" class="outline-2">
+<h2 id="org37b403a">평범한 스펙 예제</h2>
+<div class="outline-text-2" id="text-org37b403a">
 <div class="org-src-container">
 <pre class="src src-dockerfile"><span style="color: #51afef;">FROM</span> <span style="color: #ECBE7B; font-weight: bold;">debian:buster</span>
 
@@ -127,9 +124,9 @@ Dockerfile은 <a href="docker.html">Docker</a> 용 이미지를 빌드하기 위
 </p>
 </div>
 </div>
-<div id="outline-container-org80aab55" class="outline-2">
-<h2 id="org80aab55">사용자 지정</h2>
-<div class="outline-text-2" id="text-org80aab55">
+<div id="outline-container-orga3c1640" class="outline-2">
+<h2 id="orga3c1640">사용자 지정</h2>
+<div class="outline-text-2" id="text-orga3c1640">
 <p>
 특정 사용자로 굴리고(?) 싶다면 <code>USER</code> 커맨드를 쓸 수 있다.
 </p>
@@ -144,9 +141,9 @@ Dockerfile은 <a href="docker.html">Docker</a> 용 이미지를 빌드하기 위
 </p>
 </div>
 </div>
-<div id="outline-container-org6cf2273" class="outline-2">
-<h2 id="org6cf2273">Health Checking</h2>
-<div class="outline-text-2" id="text-org6cf2273">
+<div id="outline-container-orge9ca183" class="outline-2">
+<h2 id="orge9ca183">Health Checking</h2>
+<div class="outline-text-2" id="text-orge9ca183">
 <div class="org-src-container">
 <pre class="src src-dockerfile"><span style="color: #51afef;">HEALTHCHECK</span> --<span style="color: #dcaeea;">interval</span>=5s <span style="color: #98be65;">\</span>
             --<span style="color: #dcaeea;">timeout</span>=5s <span style="color: #98be65;">\</span>
@@ -156,9 +153,9 @@ Dockerfile은 <a href="docker.html">Docker</a> 용 이미지를 빌드하기 위
 </div>
 </div>
 </div>
-<div id="outline-container-org8e76e5e" class="outline-2">
-<h2 id="org8e76e5e">Multi Stage Building</h2>
-<div class="outline-text-2" id="text-org8e76e5e">
+<div id="outline-container-orgdb52d6f" class="outline-2">
+<h2 id="orgdb52d6f">Multi Stage Building</h2>
+<div class="outline-text-2" id="text-orgdb52d6f">
 <div class="org-src-container">
 <pre class="src src-dockerfile"><span style="color: #51afef;">FROM</span> <span style="color: #ECBE7B; font-weight: bold;">someimage</span> AS <span style="color: #a9a1e1; font-weight: bold;">stage1</span>
 ...
@@ -180,9 +177,6 @@ Dockerfile은 <a href="docker.html">Docker</a> 용 이미지를 빌드하기 위
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
@@ -209,9 +203,6 @@ Dockerfile은 <a href="docker.html">Docker</a> 용 이미지를 빌드하기 위
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </div>
 <div class="content-container">
@@ -231,5 +222,10 @@ gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  var elements = document.getElementsByClassName('adsbygoogle');
+  Array.prototype.forEach.call(elements, function(e) {
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  })</script>
 </body>
 </html>
