--- a/note/find.html
+++ b/note/find.html
@@ -50,9 +50,6 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </div>
 <div class="side-ad-container"></div>
@@ -68,14 +65,14 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgc274b97">기본 사용법</a>
+<li><a href="#org6e468bf">기본 사용법</a>
 <ul>
-<li><a href="#org4a04888">현재 디렉터리에서 특정 파일 검색하기</a></li>
-<li><a href="#org4f72340">특정 디렉터리에서 특정 파일 검색하기</a></li>
-<li><a href="#orgb0daad2">검색 패턴</a></li>
-<li><a href="#org1f1c87f">대소문자 무시하기</a></li>
-<li><a href="#org754d882">검색 종류 지정하기</a></li>
-<li><a href="#org401a045">검색 내용으로 특정 처리하기(exec)</a></li>
+<li><a href="#org76bd127">현재 디렉터리에서 특정 파일 검색하기</a></li>
+<li><a href="#org8b2c8ba">특정 디렉터리에서 특정 파일 검색하기</a></li>
+<li><a href="#orge7b756b">검색 패턴</a></li>
+<li><a href="#org70fb2f7">대소문자 무시하기</a></li>
+<li><a href="#org2caed42">검색 종류 지정하기</a></li>
+<li><a href="#org53747af">검색 내용으로 특정 처리하기(exec)</a></li>
 </ul>
 </li>
 </ul>
@@ -86,13 +83,13 @@
 <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-orgc274b97" class="outline-2">
-<h2 id="orgc274b97">기본 사용법</h2>
-<div class="outline-text-2" id="text-orgc274b97">
+<div id="outline-container-org6e468bf" class="outline-2">
+<h2 id="org6e468bf">기본 사용법</h2>
+<div class="outline-text-2" id="text-org6e468bf">
 </div>
-<div id="outline-container-org4a04888" class="outline-3">
-<h3 id="org4a04888">현재 디렉터리에서 특정 파일 검색하기</h3>
-<div class="outline-text-3" id="text-org4a04888">
+<div id="outline-container-org76bd127" class="outline-3">
+<h3 id="org76bd127">현재 디렉터리에서 특정 파일 검색하기</h3>
+<div class="outline-text-3" id="text-org76bd127">
 <div class="org-src-container">
 <pre class="src src-bash"><span style="color: #ECBE7B;">find</span> . -name <span style="color: #98be65;">"somename.ext"</span>
 </pre>
@@ -104,9 +101,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-org4f72340" class="outline-3">
-<h3 id="org4f72340">특정 디렉터리에서 특정 파일 검색하기</h3>
-<div class="outline-text-3" id="text-org4f72340">
+<div id="outline-container-org8b2c8ba" class="outline-3">
+<h3 id="org8b2c8ba">특정 디렉터리에서 특정 파일 검색하기</h3>
+<div class="outline-text-3" id="text-org8b2c8ba">
 <div class="org-src-container">
 <pre class="src src-bash"><span style="color: #ECBE7B;">find</span> /foo/bar <span style="color: #98be65;">"somename.ext"</span>
 </pre>
@@ -116,9 +113,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-orgb0daad2" class="outline-3">
-<h3 id="orgb0daad2">검색 패턴</h3>
-<div class="outline-text-3" id="text-orgb0daad2">
+<div id="outline-container-orge7b756b" class="outline-3">
+<h3 id="orge7b756b">검색 패턴</h3>
+<div class="outline-text-3" id="text-orge7b756b">
 <p>
 찾을 패턴으로 와일드카드를 사용할 수도 있다.
 </p>
@@ -131,9 +128,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-org1f1c87f" class="outline-3">
-<h3 id="org1f1c87f">대소문자 무시하기</h3>
-<div class="outline-text-3" id="text-org1f1c87f">
+<div id="outline-container-org70fb2f7" class="outline-3">
+<h3 id="org70fb2f7">대소문자 무시하기</h3>
+<div class="outline-text-3" id="text-org70fb2f7">
 <p>
 기본적으로 이 도구는 대소문자를 가린다.
 만약 대소문자를 가리지 않으려면 <code>iname</code> 옵션을 사용할 수 있다.
@@ -144,9 +141,9 @@
 </div>
 </div>
 </div>
-<div id="outline-container-org754d882" class="outline-3">
-<h3 id="org754d882">검색 종류 지정하기</h3>
-<div class="outline-text-3" id="text-org754d882">
+<div id="outline-container-org2caed42" class="outline-3">
+<h3 id="org2caed42">검색 종류 지정하기</h3>
+<div class="outline-text-3" id="text-org2caed42">
 <p>
 만약 특정한 종류만 검색하고 싶다면 <code>type</code> 옵션을 사용할 수 있다.
 </p>
@@ -164,9 +161,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-org401a045" class="outline-3">
-<h3 id="org401a045">검색 내용으로 특정 처리하기(exec)</h3>
-<div class="outline-text-3" id="text-org401a045">
+<div id="outline-container-org53747af" class="outline-3">
+<h3 id="org53747af">검색 내용으로 특정 처리하기(exec)</h3>
+<div class="outline-text-3" id="text-org53747af">
 <p>
 <code>-exec</code> 옵션은 검색된 내용을 이용해 외부 도구를 실행시킬 수 있게 할 수 있다.
 </p>
@@ -201,9 +198,6 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </section>
 <div class="side-ad-container">
@@ -213,9 +207,6 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </div>
 <div class="content-container">
@@ -235,5 +226,10 @@ gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  var elements = document.getElementsByClassName('adsbygoogle');
+  Array.prototype.forEach.call(elements, function(e) {
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  })</script>
 </body>
 </html>
