--- a/note/flutter.html
+++ b/note/flutter.html
@@ -50,9 +50,6 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </div>
 <div class="side-ad-container"></div>
@@ -68,10 +65,10 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgdf599b6">문제 해결</a>
+<li><a href="#orgf3539f2">문제 해결</a>
 <ul>
-<li><a href="#orgf546127">macOS에서 개발자 인증 문제</a></li>
-<li><a href="#org049df09">프레임워크 iOS 아키텍처 오류</a></li>
+<li><a href="#org4650ed7">macOS에서 개발자 인증 문제</a></li>
+<li><a href="#orgd7df1ca">프레임워크 iOS 아키텍처 오류</a></li>
 </ul>
 </li>
 </ul>
@@ -87,13 +84,13 @@ Flutter(플러터)는 Dart라는 한 가지 언어로 iOS, Android 등
 더 이상의 자세한 소개는 생략한다.
 </p>
 
-<div id="outline-container-orgdf599b6" class="outline-2">
-<h2 id="orgdf599b6">문제 해결</h2>
-<div class="outline-text-2" id="text-orgdf599b6">
+<div id="outline-container-orgf3539f2" class="outline-2">
+<h2 id="orgf3539f2">문제 해결</h2>
+<div class="outline-text-2" id="text-orgf3539f2">
 </div>
-<div id="outline-container-orgf546127" class="outline-3">
-<h3 id="orgf546127">macOS에서 개발자 인증 문제</h3>
-<div class="outline-text-3" id="text-orgf546127">
+<div id="outline-container-org4650ed7" class="outline-3">
+<h3 id="org4650ed7">macOS에서 개발자 인증 문제</h3>
+<div class="outline-text-3" id="text-org4650ed7">
 <p>
 Catalina 등 최신 <a href="macos.html">macOS</a>에서 flutter <a href="cli.html">CLI</a>
 도구를 사용하는 중 이런 오류가 나면서 커맨드가 동작하지 않는 경우가 있다.
@@ -126,9 +123,9 @@ Flutter "<code>idevice_id</code>" cannot be opened because the developer cannot 
 </p>
 </div>
 </div>
-<div id="outline-container-org049df09" class="outline-3">
-<h3 id="org049df09">프레임워크 iOS 아키텍처 오류</h3>
-<div class="outline-text-3" id="text-org049df09">
+<div id="outline-container-orgd7df1ca" class="outline-3">
+<h3 id="orgd7df1ca">프레임워크 iOS 아키텍처 오류</h3>
+<div class="outline-text-3" id="text-orgd7df1ca">
 <p>
 <code>run</code> 커맨드로 실행 시 여러 iOS 플랫폼 용으로 빌드를 하다 보면
 이상하게 아래와 같은 오류가 나면서 빌드가 실패하는 케이스를 수 차례 겪었다.
@@ -170,9 +167,6 @@ was built for iOS. (in target 'Runner' from project 'Runner')
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </section>
 <div class="side-ad-container">
@@ -182,9 +176,6 @@ was built for iOS. (in target 'Runner' from project 'Runner')
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </div>
 <div class="content-container">
@@ -204,5 +195,10 @@ gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  var elements = document.getElementsByClassName('adsbygoogle');
+  Array.prototype.forEach.call(elements, function(e) {
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  })</script>
 </body>
 </html>
