--- a/note/homebrew.html
+++ b/note/homebrew.html
@@ -50,9 +50,6 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </div>
 <div class="side-ad-container"></div>
@@ -68,22 +65,22 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org318cae6">기본 사용법</a>
+<li><a href="#orgb0edeac">기본 사용법</a>
 <ul>
-<li><a href="#orgb489706">패키지 검색</a></li>
-<li><a href="#org51b0259">패키지 정보</a></li>
-<li><a href="#org7aee20f">패키지 설치</a></li>
-<li><a href="#org85487d2">만료된 버전 확인</a></li>
-<li><a href="#org25b064f">패키지 업그레이드</a></li>
-<li><a href="#org19a9f58">구 버전 삭제하기</a></li>
-<li><a href="#orgf31059f">패키지 삭제(uninstall)</a></li>
-<li><a href="#org95e0417">의사 양반(?)</a></li>
+<li><a href="#orgf813057">패키지 검색</a></li>
+<li><a href="#org03f93c4">패키지 정보</a></li>
+<li><a href="#orgdc2d889">패키지 설치</a></li>
+<li><a href="#orgda27bc9">만료된 버전 확인</a></li>
+<li><a href="#org32f81a2">패키지 업그레이드</a></li>
+<li><a href="#org118f3d8">구 버전 삭제하기</a></li>
+<li><a href="#org647eb2f">패키지 삭제(uninstall)</a></li>
+<li><a href="#orgd4750a9">의사 양반(?)</a></li>
 </ul>
 </li>
-<li><a href="#org3048f3f">구 버전 패키지 사용하기</a></li>
-<li><a href="#orgc0406e7">다중 버전을 제공하는 패키지의 경우</a></li>
-<li><a href="#orgfe67f29">Cask</a></li>
-<li><a href="#orgdaa363a">외부 링크</a></li>
+<li><a href="#org3abba19">구 버전 패키지 사용하기</a></li>
+<li><a href="#org3f1e187">다중 버전을 제공하는 패키지의 경우</a></li>
+<li><a href="#org6ed2e93">Cask</a></li>
+<li><a href="#org930eee1">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -94,31 +91,31 @@ Homebrew는 <a href="macos.html">macOS</a> 전용 패키지 관리자다.
 또한 root 사용자가 아니어도 사용할 수도 있도록 구조를 만들어 준다는 점도 특징이다.
 </p>
 
-<div id="outline-container-org318cae6" class="outline-2">
-<h2 id="org318cae6">기본 사용법</h2>
-<div class="outline-text-2" id="text-org318cae6">
+<div id="outline-container-orgb0edeac" class="outline-2">
+<h2 id="orgb0edeac">기본 사용법</h2>
+<div class="outline-text-2" id="text-orgb0edeac">
 </div>
-<div id="outline-container-orgb489706" class="outline-3">
-<h3 id="orgb489706">패키지 검색</h3>
-<div class="outline-text-3" id="text-orgb489706">
+<div id="outline-container-orgf813057" class="outline-3">
+<h3 id="orgf813057">패키지 검색</h3>
+<div class="outline-text-3" id="text-orgf813057">
 <div class="org-src-container">
 <pre class="src src-bash">brew search KEYWORD
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-org51b0259" class="outline-3">
-<h3 id="org51b0259">패키지 정보</h3>
-<div class="outline-text-3" id="text-org51b0259">
+<div id="outline-container-org03f93c4" class="outline-3">
+<h3 id="org03f93c4">패키지 정보</h3>
+<div class="outline-text-3" id="text-org03f93c4">
 <div class="org-src-container">
 <pre class="src src-bash">brew info PACKAGE_NAME
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-org7aee20f" class="outline-3">
-<h3 id="org7aee20f">패키지 설치</h3>
-<div class="outline-text-3" id="text-org7aee20f">
+<div id="outline-container-orgdc2d889" class="outline-3">
+<h3 id="orgdc2d889">패키지 설치</h3>
+<div class="outline-text-3" id="text-orgdc2d889">
 <div class="org-src-container">
 <pre class="src src-bash">brew install PACKAGE_NAME
 </pre>
@@ -129,9 +126,9 @@ Homebrew는 <a href="macos.html">macOS</a> 전용 패키지 관리자다.
 </p>
 </div>
 </div>
-<div id="outline-container-org85487d2" class="outline-3">
-<h3 id="org85487d2">만료된 버전 확인</h3>
-<div class="outline-text-3" id="text-org85487d2">
+<div id="outline-container-orgda27bc9" class="outline-3">
+<h3 id="orgda27bc9">만료된 버전 확인</h3>
+<div class="outline-text-3" id="text-orgda27bc9">
 <p>
 설치된 패키지의 최신 버전이 존재하는지 확인하려면 <code>update</code> 후
 <code>outdated</code> 를 살펴보자.
@@ -143,9 +140,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-org25b064f" class="outline-3">
-<h3 id="org25b064f">패키지 업그레이드</h3>
-<div class="outline-text-3" id="text-org25b064f">
+<div id="outline-container-org32f81a2" class="outline-3">
+<h3 id="org32f81a2">패키지 업그레이드</h3>
+<div class="outline-text-3" id="text-org32f81a2">
 <div class="org-src-container">
 <pre class="src src-bash">brew upgrade PACKAGE_NAME
 </pre>
@@ -159,9 +156,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-org19a9f58" class="outline-3">
-<h3 id="org19a9f58">구 버전 삭제하기</h3>
-<div class="outline-text-3" id="text-org19a9f58">
+<div id="outline-container-org118f3d8" class="outline-3">
+<h3 id="org118f3d8">구 버전 삭제하기</h3>
+<div class="outline-text-3" id="text-org118f3d8">
 <p>
 패키지를 업그레이드해도 구 버전은 그대로 남아 파일 시스템에 잔존한다.
 이를 청소하기 위해 <code>cleanup</code> 커맨드를 사용할 수 있다.
@@ -175,18 +172,18 @@ brew outdated
 </p>
 </div>
 </div>
-<div id="outline-container-orgf31059f" class="outline-3">
-<h3 id="orgf31059f">패키지 삭제(uninstall)</h3>
-<div class="outline-text-3" id="text-orgf31059f">
+<div id="outline-container-org647eb2f" class="outline-3">
+<h3 id="org647eb2f">패키지 삭제(uninstall)</h3>
+<div class="outline-text-3" id="text-org647eb2f">
 <div class="org-src-container">
 <pre class="src src-bash">brew uninstall PACKAGE_NAME
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-org95e0417" class="outline-3">
-<h3 id="org95e0417">의사 양반(?)</h3>
-<div class="outline-text-3" id="text-org95e0417">
+<div id="outline-container-orgd4750a9" class="outline-3">
+<h3 id="orgd4750a9">의사 양반(?)</h3>
+<div class="outline-text-3" id="text-orgd4750a9">
 <div class="org-src-container">
 <pre class="src src-bash">brew doctor
 </pre>
@@ -197,9 +194,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-org3048f3f" class="outline-2">
-<h2 id="org3048f3f">구 버전 패키지 사용하기</h2>
-<div class="outline-text-2" id="text-org3048f3f">
+<div id="outline-container-org3abba19" class="outline-2">
+<h2 id="org3abba19">구 버전 패키지 사용하기</h2>
+<div class="outline-text-2" id="text-org3abba19">
 <p>
 만약 <code>upgrade</code> 등으로 최신버전이 설치되었다면
 해당 패키지의 구 버전도 여전히 파일 시스템에 남아있다.
@@ -214,9 +211,9 @@ brew outdated
 </p>
 </div>
 </div>
-<div id="outline-container-orgc0406e7" class="outline-2">
-<h2 id="orgc0406e7">다중 버전을 제공하는 패키지의 경우</h2>
-<div class="outline-text-2" id="text-orgc0406e7">
+<div id="outline-container-org3f1e187" class="outline-2">
+<h2 id="org3f1e187">다중 버전을 제공하는 패키지의 경우</h2>
+<div class="outline-text-2" id="text-org3f1e187">
 <p>
 다중 버전의 패키지가 필요한 경우 우선 지원되는지 부터 확인해봐야 한다.
 예를 들어 node.js 의 경우 LTS 버전이 다양하게 제공되고 있다.
@@ -319,9 +316,9 @@ v10.x.x
 </p>
 </div>
 </div>
-<div id="outline-container-orgfe67f29" class="outline-2">
-<h2 id="orgfe67f29">Cask</h2>
-<div class="outline-text-2" id="text-orgfe67f29">
+<div id="outline-container-org6ed2e93" class="outline-2">
+<h2 id="org6ed2e93">Cask</h2>
+<div class="outline-text-2" id="text-org6ed2e93">
 <p>
 cask는 <a href="macos.html">macOS</a> 응용 소프트웨어나
 다양한 리소스를 설치할 수 있게 도와주는 확장 도구다.
@@ -355,9 +352,9 @@ outdated나 upgrade, uninstall 등등의 커맨드는 비슷하게 사용할 수
 </p>
 </div>
 </div>
-<div id="outline-container-orgdaa363a" class="outline-2">
-<h2 id="orgdaa363a">외부 링크</h2>
-<div class="outline-text-2" id="text-orgdaa363a">
+<div id="outline-container-org930eee1" class="outline-2">
+<h2 id="org930eee1">외부 링크</h2>
+<div class="outline-text-2" id="text-org930eee1">
 <ul class="org-ul">
 <li><a target="_blank" href="https://brew.sh">🌏Homebrew 공식 홈페이지</a></li>
 </ul>
@@ -370,9 +367,6 @@ outdated나 upgrade, uninstall 등등의 커맨드는 비슷하게 사용할 수
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
@@ -420,9 +414,6 @@ outdated나 upgrade, uninstall 등등의 커맨드는 비슷하게 사용할 수
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </div>
 <div class="content-container">
@@ -442,5 +433,10 @@ gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  var elements = document.getElementsByClassName('adsbygoogle');
+  Array.prototype.forEach.call(elements, function(e) {
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  })</script>
 </body>
 </html>
