--- a/note/instance.html
+++ b/note/instance.html
@@ -50,9 +50,6 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </div>
 <div class="side-ad-container"></div>
@@ -68,32 +65,32 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org2425cdd">프로세스 개념</a></li>
-<li><a href="#orgfdcb540">특정 서비스의 용어</a></li>
-<li><a href="#org77dbf0f">컴퓨터 프로그래밍 개념</a></li>
+<li><a href="#orge73d813">프로세스 개념</a></li>
+<li><a href="#orgc4c49d5">특정 서비스의 용어</a></li>
+<li><a href="#org4c0b372">컴퓨터 프로그래밍 개념</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org2425cdd" class="outline-2">
-<h2 id="org2425cdd">프로세스 개념</h2>
-<div class="outline-text-2" id="text-org2425cdd">
+<div id="outline-container-orge73d813" class="outline-2">
+<h2 id="orge73d813">프로세스 개념</h2>
+<div class="outline-text-2" id="text-orge73d813">
 <p>
 실행 중인 임의의 프로세스를 인스턴스라고 부르기도 한다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgfdcb540" class="outline-2">
-<h2 id="orgfdcb540">특정 서비스의 용어</h2>
-<div class="outline-text-2" id="text-orgfdcb540">
+<div id="outline-container-orgc4c49d5" class="outline-2">
+<h2 id="orgc4c49d5">특정 서비스의 용어</h2>
+<div class="outline-text-2" id="text-orgc4c49d5">
 <p>
 예를 들어 AWS의 EC2 서비스의 경우 각각의 가상 서버를 EC2 인스턴스라고 부른다.
 </p>
 </div>
 </div>
-<div id="outline-container-org77dbf0f" class="outline-2">
-<h2 id="org77dbf0f">컴퓨터 프로그래밍 개념</h2>
-<div class="outline-text-2" id="text-org77dbf0f">
+<div id="outline-container-org4c0b372" class="outline-2">
+<h2 id="org4c0b372">컴퓨터 프로그래밍 개념</h2>
+<div class="outline-text-2" id="text-org4c0b372">
 <p>
 <a href="definition.html">정의</a>를 실체화(?) 시킨 것을 인스턴스라고 부른다.
 </p>
@@ -142,9 +139,6 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
@@ -185,9 +179,6 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </div>
 <div class="content-container">
@@ -207,5 +198,10 @@ gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  var elements = document.getElementsByClassName('adsbygoogle');
+  Array.prototype.forEach.call(elements, function(e) {
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  })</script>
 </body>
 </html>
