--- a/note/javascript.html
+++ b/note/javascript.html
@@ -50,9 +50,6 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </div>
 <div class="side-ad-container"></div>
@@ -68,22 +65,22 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orge607a0d">노트</a>
+<li><a href="#orgd3b1757">노트</a>
 <ul>
-<li><a href="#org798885a">모듈(Module)</a></li>
-<li><a href="#org589726d">스프레드(Spreads) 연산자</a></li>
-<li><a href="#org7181936">튜플 비슷한 문법</a></li>
+<li><a href="#org93445c3">모듈(Module)</a></li>
+<li><a href="#org596f494">스프레드(Spreads) 연산자</a></li>
+<li><a href="#org9bca8ee">튜플 비슷한 문법</a></li>
 </ul>
 </li>
-<li><a href="#org8bc7010">실전(?) 메모</a>
+<li><a href="#org91500ac">실전(?) 메모</a>
 <ul>
-<li><a href="#org14cb508">요소 얻기</a></li>
-<li><a href="#orgc235a97">특정 블록에 HTML 넣기</a></li>
-<li><a href="#orga67e25b">콘텐츠 높이 구하기</a></li>
-<li><a href="#org7871f2f">특정 태그 앞에 요소 넣기</a></li>
+<li><a href="#orgc1d5df7">요소 얻기</a></li>
+<li><a href="#org75cf0ba">특정 블록에 HTML 넣기</a></li>
+<li><a href="#org9a1da22">콘텐츠 높이 구하기</a></li>
+<li><a href="#orgdd61adf">특정 태그 앞에 요소 넣기</a></li>
 </ul>
 </li>
-<li><a href="#orgea8fb91">외부 링크</a></li>
+<li><a href="#org219f48e">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -101,13 +98,13 @@
 버전은 ES6를 기준으로 한다.
 </p>
 
-<div id="outline-container-orge607a0d" class="outline-2">
-<h2 id="orge607a0d">노트</h2>
-<div class="outline-text-2" id="text-orge607a0d">
+<div id="outline-container-orgd3b1757" class="outline-2">
+<h2 id="orgd3b1757">노트</h2>
+<div class="outline-text-2" id="text-orgd3b1757">
 </div>
-<div id="outline-container-org798885a" class="outline-3">
-<h3 id="org798885a">모듈(Module)</h3>
-<div class="outline-text-3" id="text-org798885a">
+<div id="outline-container-org93445c3" class="outline-3">
+<h3 id="org93445c3">모듈(Module)</h3>
+<div class="outline-text-3" id="text-org93445c3">
 <p>
 일반적으로 모듈은 아래와 같은 형식으로 쓰인다.
 </p>
@@ -159,9 +156,9 @@ console.log(someValues.value2);
 </div>
 </div>
 </div>
-<div id="outline-container-org589726d" class="outline-3">
-<h3 id="org589726d">스프레드(Spreads) 연산자</h3>
-<div class="outline-text-3" id="text-org589726d">
+<div id="outline-container-org596f494" class="outline-3">
+<h3 id="org596f494">스프레드(Spreads) 연산자</h3>
+<div class="outline-text-3" id="text-org596f494">
 <p>
 스프레드 연산자는 <code>...</code> 으로 표기되며
 이름처럼 펼치거나 확산한다라는 의미로 동작한다.
@@ -224,9 +221,9 @@ rest에는 <code>[2, 3, 4, 5]</code> 가 들어간다.
 </p>
 </div>
 </div>
-<div id="outline-container-org7181936" class="outline-3">
-<h3 id="org7181936">튜플 비슷한 문법</h3>
-<div class="outline-text-3" id="text-org7181936">
+<div id="outline-container-org9bca8ee" class="outline-3">
+<h3 id="org9bca8ee">튜플 비슷한 문법</h3>
+<div class="outline-text-3" id="text-org9bca8ee">
 <div class="org-src-container">
 <pre class="src src-javascript"><span style="color: #51afef;">let</span> [<span style="color: #dcaeea;">foo</span>, <span style="color: #dcaeea;">bar</span>] = [<span style="color: #da8548; font-weight: bold;">1</span>, <span style="color: #da8548; font-weight: bold;">2</span>]
 [foo, bar] = [bar, foo]
@@ -238,13 +235,13 @@ rest에는 <code>[2, 3, 4, 5]</code> 가 들어간다.
 </div>
 </div>
 </div>
-<div id="outline-container-org8bc7010" class="outline-2">
-<h2 id="org8bc7010">실전(?) 메모</h2>
-<div class="outline-text-2" id="text-org8bc7010">
+<div id="outline-container-org91500ac" class="outline-2">
+<h2 id="org91500ac">실전(?) 메모</h2>
+<div class="outline-text-2" id="text-org91500ac">
 </div>
-<div id="outline-container-org14cb508" class="outline-3">
-<h3 id="org14cb508">요소 얻기</h3>
-<div class="outline-text-3" id="text-org14cb508">
+<div id="outline-container-orgc1d5df7" class="outline-3">
+<h3 id="orgc1d5df7">요소 얻기</h3>
+<div class="outline-text-3" id="text-orgc1d5df7">
 <div class="org-src-container">
 <pre class="src src-javascript">document.getElementById(<span style="color: #98be65;">'some-id'</span>)
 document.getElementsByClassName(<span style="color: #98be65;">'some-class'</span>)[<span style="color: #da8548; font-weight: bold;">0</span>]
@@ -256,9 +253,9 @@ document.getElementsByTagName(<span style="color: #98be65;">'tag-name'</span>)[<
 </p>
 </div>
 </div>
-<div id="outline-container-orgc235a97" class="outline-3">
-<h3 id="orgc235a97">특정 블록에 HTML 넣기</h3>
-<div class="outline-text-3" id="text-orgc235a97">
+<div id="outline-container-org75cf0ba" class="outline-3">
+<h3 id="org75cf0ba">특정 블록에 HTML 넣기</h3>
+<div class="outline-text-3" id="text-org75cf0ba">
 <p>
 아래는 some-id라는 아이디의 div 블록 내부 내용을 지정하는 예제다.
 </p>
@@ -268,9 +265,9 @@ document.getElementsByTagName(<span style="color: #98be65;">'tag-name'</span>)[<
 </div>
 </div>
 </div>
-<div id="outline-container-orga67e25b" class="outline-3">
-<h3 id="orga67e25b">콘텐츠 높이 구하기</h3>
-<div class="outline-text-3" id="text-orga67e25b">
+<div id="outline-container-org9a1da22" class="outline-3">
+<h3 id="org9a1da22">콘텐츠 높이 구하기</h3>
+<div class="outline-text-3" id="text-org9a1da22">
 <p>
 웹 브라우저에 표시되는 내용의 높이(height)를 구하는 방법이다.
 </p>
@@ -290,9 +287,9 @@ document.getElementsByTagName(<span style="color: #98be65;">'tag-name'</span>)[<
 </p>
 </div>
 </div>
-<div id="outline-container-org7871f2f" class="outline-3">
-<h3 id="org7871f2f">특정 태그 앞에 요소 넣기</h3>
-<div class="outline-text-3" id="text-org7871f2f">
+<div id="outline-container-orgdd61adf" class="outline-3">
+<h3 id="orgdd61adf">특정 태그 앞에 요소 넣기</h3>
+<div class="outline-text-3" id="text-orgdd61adf">
 <p>
 수동으로 노드를 만들어서 특정 태그 노드 앞에 붙이는 예제다.
 </p>
@@ -319,9 +316,9 @@ targetElement.parentNode.insertBefore(newElement, targetElement)
 </div>
 </div>
 </div>
-<div id="outline-container-orgea8fb91" class="outline-2">
-<h2 id="orgea8fb91">외부 링크</h2>
-<div class="outline-text-2" id="text-orgea8fb91">
+<div id="outline-container-org219f48e" class="outline-2">
+<h2 id="org219f48e">외부 링크</h2>
+<div class="outline-text-2" id="text-org219f48e">
 <ul class="org-ul">
 <li><a target="_blank" href="https://ko.javascript.info/">🌏모던 JavaScript 튜토리얼</a></li>
 <li><a target="_blank" href="https://junhobaik.github.io/es2016-es2020/">🌏ECMAScript ES2016~ES2020 정리</a></li>
@@ -335,9 +332,6 @@ targetElement.parentNode.insertBefore(newElement, targetElement)
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </section>
 <div class="side-ad-container">
@@ -347,9 +341,6 @@ targetElement.parentNode.insertBefore(newElement, targetElement)
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </div>
 <div class="content-container">
@@ -369,5 +360,10 @@ gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  var elements = document.getElementsByClassName('adsbygoogle');
+  Array.prototype.forEach.call(elements, function(e) {
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  })</script>
 </body>
 </html>
