--- a/note/magit.html
+++ b/note/magit.html
@@ -50,9 +50,6 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </div>
 <div class="side-ad-container"></div>
@@ -68,16 +65,16 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgc600815">magit-status</a></li>
-<li><a href="#orge0d310f">Stage</a></li>
-<li><a href="#org1acc3ab">Commit</a></li>
-<li><a href="#orgac4a2dd">Log</a></li>
-<li><a href="#org901bbdc">Push</a></li>
-<li><a href="#org23cc0a9">Pull</a></li>
-<li><a href="#orge703d3a">Branch</a></li>
-<li><a href="#org5034199">Reset or Revert</a></li>
-<li><a href="#org75d0bcf">기타</a></li>
-<li><a href="#orge154741">외부 링크</a></li>
+<li><a href="#orgd3dfba5">magit-status</a></li>
+<li><a href="#org5834682">Stage</a></li>
+<li><a href="#org9b46140">Commit</a></li>
+<li><a href="#org3917c28">Log</a></li>
+<li><a href="#orgb1c82d7">Push</a></li>
+<li><a href="#orgc41a0c9">Pull</a></li>
+<li><a href="#org26e55d3">Branch</a></li>
+<li><a href="#org01e9fae">Reset or Revert</a></li>
+<li><a href="#org1ccd8a5">기타</a></li>
+<li><a href="#orge5f8779">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -98,9 +95,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 <a href="spacemacs.html">Spacemacs</a>용으로 커스터마이징 된
 단축키를 위주로 정리한다.
 </p>
-<div id="outline-container-orgc600815" class="outline-2">
-<h2 id="orgc600815">magit-status</h2>
-<div class="outline-text-2" id="text-orgc600815">
+<div id="outline-container-orgd3dfba5" class="outline-2">
+<h2 id="orgd3dfba5">magit-status</h2>
+<div class="outline-text-2" id="text-orgd3dfba5">
 <p>
 현재 상태를 표시하는 UI를 띄운다.
 개인적으로 magit 을 시작하는 가장 좋은 방법으로 사용한다.
@@ -122,9 +119,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-orge0d310f" class="outline-2">
-<h2 id="orge0d310f">Stage</h2>
-<div class="outline-text-2" id="text-orge0d310f">
+<div id="outline-container-org5834682" class="outline-2">
+<h2 id="org5834682">Stage</h2>
+<div class="outline-text-2" id="text-org5834682">
 <p>
 수정된 파일을 선택하고 <code>s</code> 를 누르면 스테이지가 된다.
 각 수정 내역에서 <code>TAB</code> 을 누르면 간단한 diff를 볼 수 있는데
@@ -137,9 +134,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org1acc3ab" class="outline-2">
-<h2 id="org1acc3ab">Commit</h2>
-<div class="outline-text-2" id="text-org1acc3ab">
+<div id="outline-container-org9b46140" class="outline-2">
+<h2 id="org9b46140">Commit</h2>
+<div class="outline-text-2" id="text-org9b46140">
 <p>
 <code>c c</code> 를 누르면 커밋 모드로 바뀐다.
 스테이지 된 파일들의 간략한 변경점을 볼 수 있으며
@@ -155,9 +152,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-orgac4a2dd" class="outline-2">
-<h2 id="orgac4a2dd">Log</h2>
-<div class="outline-text-2" id="text-orgac4a2dd">
+<div id="outline-container-org3917c28" class="outline-2">
+<h2 id="org3917c28">Log</h2>
+<div class="outline-text-2" id="text-org3917c28">
 <p>
 <code>l l</code> 을 이용하면 로그를 볼 수 있다.
 </p>
@@ -167,25 +164,25 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org901bbdc" class="outline-2">
-<h2 id="org901bbdc">Push</h2>
-<div class="outline-text-2" id="text-org901bbdc">
+<div id="outline-container-orgb1c82d7" class="outline-2">
+<h2 id="orgb1c82d7">Push</h2>
+<div class="outline-text-2" id="text-orgb1c82d7">
 <p>
 <code>p p</code> 를 이용하면 원격에 현재 브랜치 이름으로 푸시(push) 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-org23cc0a9" class="outline-2">
-<h2 id="org23cc0a9">Pull</h2>
-<div class="outline-text-2" id="text-org23cc0a9">
+<div id="outline-container-orgc41a0c9" class="outline-2">
+<h2 id="orgc41a0c9">Pull</h2>
+<div class="outline-text-2" id="text-orgc41a0c9">
 <p>
 <code>F u</code> 를 이용하면 origin 에서 현재 브랜치로 풀(pull)이 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-orge703d3a" class="outline-2">
-<h2 id="orge703d3a">Branch</h2>
-<div class="outline-text-2" id="text-orge703d3a">
+<div id="outline-container-org26e55d3" class="outline-2">
+<h2 id="org26e55d3">Branch</h2>
+<div class="outline-text-2" id="text-org26e55d3">
 <dl class="org-dl">
 <dt><code>b c</code></dt><dd>브랜치 생성</dd>
 <dt><code>b b</code></dt><dd>브랜치 전환</dd>
@@ -193,26 +190,26 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </dl>
 </div>
 </div>
-<div id="outline-container-org5034199" class="outline-2">
-<h2 id="org5034199">Reset or Revert</h2>
-<div class="outline-text-2" id="text-org5034199">
+<div id="outline-container-org01e9fae" class="outline-2">
+<h2 id="org01e9fae">Reset or Revert</h2>
+<div class="outline-text-2" id="text-org01e9fae">
 <p>
 <code>x</code> :: 변경 사항을 날리고 원래대로(HEAD) 돌린다.
 </p>
 </div>
 </div>
-<div id="outline-container-org75d0bcf" class="outline-2">
-<h2 id="org75d0bcf">기타</h2>
-<div class="outline-text-2" id="text-org75d0bcf">
+<div id="outline-container-org1ccd8a5" class="outline-2">
+<h2 id="org1ccd8a5">기타</h2>
+<div class="outline-text-2" id="text-org1ccd8a5">
 <ul class="org-ul">
 <li><code>magit-status</code> 에서 <code>$</code> 키를 누르면
 실제로 사용되는 커맨드 및 응답 등의 로그를 볼 수 있다.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orge154741" class="outline-2">
-<h2 id="orge154741">외부 링크</h2>
-<div class="outline-text-2" id="text-orge154741">
+<div id="outline-container-orge5f8779" class="outline-2">
+<h2 id="orge5f8779">외부 링크</h2>
+<div class="outline-text-2" id="text-orge5f8779">
 <ul class="org-ul">
 <li><a target="_blank" href="https://www.youtube.com/watch?v=qntVkQyacPY">🌏Spacemacs #7 Magit Basics | 기본적인 가이드</a></li>
 <li><a target="_blank" href="https://www.youtube.com/watch?v=ZITDJZAB68w">🌏Spacemacs #8 Magit: Remote REPO / Squash Commits | 원격저장소, 커밋합치기</a></li>
@@ -226,9 +223,6 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </section>
 <div class="side-ad-container">
@@ -238,9 +232,6 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </div>
 <div class="content-container">
@@ -260,5 +251,10 @@ gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  var elements = document.getElementsByClassName('adsbygoogle');
+  Array.prototype.forEach.call(elements, function(e) {
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  })</script>
 </body>
 </html>
