--- a/note/object.html
+++ b/note/object.html
@@ -50,9 +50,6 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </div>
 <div class="side-ad-container"></div>
@@ -68,16 +65,16 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org01dbba3">사전적 의미</a></li>
-<li><a href="#org9844b64">컴퓨터 프로그래밍 개념 1</a></li>
-<li><a href="#org137f279">컴퓨터 프로그래밍 개념 2</a></li>
+<li><a href="#org917f53a">사전적 의미</a></li>
+<li><a href="#orgd43042a">컴퓨터 프로그래밍 개념 1</a></li>
+<li><a href="#org471bf5f">컴퓨터 프로그래밍 개념 2</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org01dbba3" class="outline-2">
-<h2 id="org01dbba3">사전적 의미</h2>
-<div class="outline-text-2" id="text-org01dbba3">
+<div id="outline-container-org917f53a" class="outline-2">
+<h2 id="org917f53a">사전적 의미</h2>
+<div class="outline-text-2" id="text-org917f53a">
 <blockquote>
 <p>
 물건, 물체
@@ -88,9 +85,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-org9844b64" class="outline-2">
-<h2 id="org9844b64">컴퓨터 프로그래밍 개념 1</h2>
-<div class="outline-text-2" id="text-org9844b64">
+<div id="outline-container-orgd43042a" class="outline-2">
+<h2 id="orgd43042a">컴퓨터 프로그래밍 개념 1</h2>
+<div class="outline-text-2" id="text-orgd43042a">
 <p>
 오브젝트(Object, 객체)는 OOP(Object Orient Programming, 객체 지향 프로그래밍)에서
 클래스(Class)를 실체화 시킨 <a href="instance.html">인스턴스</a>를 특별히 부르는 이름이다.
@@ -101,9 +98,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-org137f279" class="outline-2">
-<h2 id="org137f279">컴퓨터 프로그래밍 개념 2</h2>
-<div class="outline-text-2" id="text-org137f279">
+<div id="outline-container-org471bf5f" class="outline-2">
+<h2 id="org471bf5f">컴퓨터 프로그래밍 개념 2</h2>
+<div class="outline-text-2" id="text-org471bf5f">
 <p>
 C나 C++ 구현 파일을 컴파일해서 나온 이진(Binary) 파일을 오브젝트 파일이라고 부른다.
 실제로 확장자가 <code>.o</code> 이다.
@@ -118,9 +115,6 @@ C나 C++ 구현 파일을 컴파일해서 나온 이진(Binary) 파일을 오브
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
@@ -140,9 +134,6 @@ C나 C++ 구현 파일을 컴파일해서 나온 이진(Binary) 파일을 오브
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </div>
 <div class="content-container">
@@ -162,5 +153,10 @@ gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  var elements = document.getElementsByClassName('adsbygoogle');
+  Array.prototype.forEach.call(elements, function(e) {
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  })</script>
 </body>
 </html>
