--- a/note/sh.html
+++ b/note/sh.html
@@ -50,9 +50,6 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </div>
 <div class="side-ad-container"></div>
@@ -68,27 +65,27 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orga587446">소개</a></li>
-<li><a href="#org5315178">스크립팅 노트</a>
+<li><a href="#org4a3191c">소개</a></li>
+<li><a href="#org176a5e9">스크립팅 노트</a>
 <ul>
-<li><a href="#org9383f9a">실행 가능한 스크립트</a></li>
-<li><a href="#org3f3cd6c">if</a></li>
-<li><a href="#orgf3abb64">루프</a></li>
-<li><a href="#org670ce08">조건식 오퍼레이터</a></li>
-<li><a href="#org5db46ba">디렉토리 존재 유무 체크</a></li>
-<li><a href="#orgbcddb50">파일 개수</a></li>
-<li><a href="#orgba3c591">와일드카드 인자 처리</a></li>
-<li><a href="#org2bd0233">에러가 나면 멈추게 하기</a></li>
-<li><a href="#orga95b7d0">에러 메시지 숨기기</a></li>
+<li><a href="#org25e05a8">실행 가능한 스크립트</a></li>
+<li><a href="#org4da987f">if</a></li>
+<li><a href="#orge0c4b07">루프</a></li>
+<li><a href="#org0a43277">조건식 오퍼레이터</a></li>
+<li><a href="#org9161d18">디렉토리 존재 유무 체크</a></li>
+<li><a href="#org73fa53e">파일 개수</a></li>
+<li><a href="#orgfca93f6">와일드카드 인자 처리</a></li>
+<li><a href="#org154b750">에러가 나면 멈추게 하기</a></li>
+<li><a href="#org6d83fe3">에러 메시지 숨기기</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orga587446" class="outline-2">
-<h2 id="orga587446">소개</h2>
-<div class="outline-text-2" id="text-orga587446">
+<div id="outline-container-org4a3191c" class="outline-2">
+<h2 id="org4a3191c">소개</h2>
+<div class="outline-text-2" id="text-org4a3191c">
 <p>
 <code>sh</code> 는 Bourne Shell의 축약된 이름으로
 유닉스에서 가장 기본적으로 쓰이던 <a href="shell.html">셸</a> 이다.
@@ -97,16 +94,16 @@
 </p>
 </div>
 </div>
-<div id="outline-container-org5315178" class="outline-2">
-<h2 id="org5315178">스크립팅 노트</h2>
-<div class="outline-text-2" id="text-org5315178">
+<div id="outline-container-org176a5e9" class="outline-2">
+<h2 id="org176a5e9">스크립팅 노트</h2>
+<div class="outline-text-2" id="text-org176a5e9">
 <p>
 전반적인 기준 없이 그냥 메모 단위로 기록되는 팁이다.
 </p>
 </div>
-<div id="outline-container-org9383f9a" class="outline-3">
-<h3 id="org9383f9a">실행 가능한 스크립트</h3>
-<div class="outline-text-3" id="text-org9383f9a">
+<div id="outline-container-org25e05a8" class="outline-3">
+<h3 id="org25e05a8">실행 가능한 스크립트</h3>
+<div class="outline-text-3" id="text-org25e05a8">
 <p>
 일반적으로 셸 스크립트를 만들면 셸을 통해서 실행하는 것이 보통이다.
 </p>
@@ -167,9 +164,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-org3f3cd6c" class="outline-3">
-<h3 id="org3f3cd6c">if</h3>
-<div class="outline-text-3" id="text-org3f3cd6c">
+<div id="outline-container-org4da987f" class="outline-3">
+<h3 id="org4da987f">if</h3>
+<div class="outline-text-3" id="text-org4da987f">
 <div class="org-src-container">
 <pre class="src src-sh"><span style="color: #51afef;">if</span> <span style="color: #51afef;">[</span> condition <span style="color: #51afef;">]</span>
 <span style="color: #51afef;">then</span>
@@ -208,9 +205,9 @@ AND 혹은 OR 조건은 아래처럼 할 수도 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgf3abb64" class="outline-3">
-<h3 id="orgf3abb64">루프</h3>
-<div class="outline-text-3" id="text-orgf3abb64">
+<div id="outline-container-orge0c4b07" class="outline-3">
+<h3 id="orge0c4b07">루프</h3>
+<div class="outline-text-3" id="text-orge0c4b07">
 <p>
 <code>for</code> 문을 이용한 현대적인(?) 루프는 아래처럼 쓸 수 있다.
 </p>
@@ -227,9 +224,9 @@ AND 혹은 OR 조건은 아래처럼 할 수도 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-org670ce08" class="outline-3">
-<h3 id="org670ce08">조건식 오퍼레이터</h3>
-<div class="outline-text-3" id="text-org670ce08">
+<div id="outline-container-org0a43277" class="outline-3">
+<h3 id="org0a43277">조건식 오퍼레이터</h3>
+<div class="outline-text-3" id="text-org0a43277">
 <ul class="org-ul">
 <li><code>=</code>, <code>!=</code> 문자열이 동일한지, 동일하지 않은지</li>
 <li><code>-eq</code>, <code>-ne</code>, <code>-gt</code>, <code>-ge</code>, <code>-lt</code>, <code>-le</code> 차례대로 equal, not equal, greater
@@ -244,9 +241,9 @@ than, greater than or equal, less than, less than or equal</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org5db46ba" class="outline-3">
-<h3 id="org5db46ba">디렉토리 존재 유무 체크</h3>
-<div class="outline-text-3" id="text-org5db46ba">
+<div id="outline-container-org9161d18" class="outline-3">
+<h3 id="org9161d18">디렉토리 존재 유무 체크</h3>
+<div class="outline-text-3" id="text-org9161d18">
 <p>
 위에서도 정리했지만 <code>-d</code> 플래그를 쓸 수 있다.
 </p>
@@ -261,9 +258,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-orgbcddb50" class="outline-3">
-<h3 id="orgbcddb50">파일 개수</h3>
-<div class="outline-text-3" id="text-orgbcddb50">
+<div id="outline-container-org73fa53e" class="outline-3">
+<h3 id="org73fa53e">파일 개수</h3>
+<div class="outline-text-3" id="text-org73fa53e">
 <div class="org-src-container">
 <pre class="src src-sh"><span style="color: #dcaeea;">COUNT</span>=$<span style="color: #51afef;">(</span><span style="color: #ECBE7B;">ls</span> /foo/bar | wc -l<span style="color: #51afef;">)</span>
 </pre>
@@ -287,9 +284,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-orgba3c591" class="outline-3">
-<h3 id="orgba3c591">와일드카드 인자 처리</h3>
-<div class="outline-text-3" id="text-orgba3c591">
+<div id="outline-container-orgfca93f6" class="outline-3">
+<h3 id="orgfca93f6">와일드카드 인자 처리</h3>
+<div class="outline-text-3" id="text-orgfca93f6">
 <p>
 셸 스크립트에 <code>*.ext</code> 같은 파일 이름 와일드카드를 넘겼을 때
 이를 나열하는 방법을 for 커맨드로 표현하면 이렇다.
@@ -307,9 +304,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-org2bd0233" class="outline-3">
-<h3 id="org2bd0233">에러가 나면 멈추게 하기</h3>
-<div class="outline-text-3" id="text-org2bd0233">
+<div id="outline-container-org154b750" class="outline-3">
+<h3 id="org154b750">에러가 나면 멈추게 하기</h3>
+<div class="outline-text-3" id="text-org154b750">
 <p>
 셸 스크립트 상단에 아래 한 줄을 넣어두면 에러가 났을 때 스크립트가 멈춘다.
 </p>
@@ -319,9 +316,9 @@ than, greater than or equal, less than, less than or equal</li>
 </div>
 </div>
 </div>
-<div id="outline-container-orga95b7d0" class="outline-3">
-<h3 id="orga95b7d0">에러 메시지 숨기기</h3>
-<div class="outline-text-3" id="text-orga95b7d0">
+<div id="outline-container-org6d83fe3" class="outline-3">
+<h3 id="org6d83fe3">에러 메시지 숨기기</h3>
+<div class="outline-text-3" id="text-org6d83fe3">
 <p>
 에러 메시지는 <code>stderr</code> (2) 파이프로 전달되니 이것을 지옥의 쓰레기통(?)에 던지면 된다.
 </p>
@@ -339,9 +336,6 @@ than, greater than or equal, less than, less than or equal</li>
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
@@ -361,9 +355,6 @@ than, greater than or equal, less than, less than or equal</li>
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </div>
 <div class="content-container">
@@ -383,5 +374,10 @@ gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  var elements = document.getElementsByClassName('adsbygoogle');
+  Array.prototype.forEach.call(elements, function(e) {
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  })</script>
 </body>
 </html>
