--- a/note/tmux.html
+++ b/note/tmux.html
@@ -50,9 +50,6 @@
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </div>
 <div class="side-ad-container"></div>
@@ -68,20 +65,20 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgafc0bfd">사용법</a></li>
-<li><a href="#org8ee2965">설정 방법</a>
+<li><a href="#org7588c6b">사용법</a></li>
+<li><a href="#orgab81c41">설정 방법</a>
 <ul>
-<li><a href="#org58725f4">리더 키(Prefix) 변경하기</a></li>
+<li><a href="#orgca92a1a">리더 키(Prefix) 변경하기</a></li>
 </ul>
 </li>
-<li><a href="#org28aee58">단축키</a></li>
-<li><a href="#org05dd190">기타 팁</a>
+<li><a href="#org2f84f19">단축키</a></li>
+<li><a href="#orgeb16790">기타 팁</a>
 <ul>
-<li><a href="#org27af876">선택 영역 복사하기</a></li>
-<li><a href="#org1b1f24e">종료하지 않고 설정 다시 읽어 들이기</a></li>
+<li><a href="#org54f8aed">선택 영역 복사하기</a></li>
+<li><a href="#orgfb692f2">종료하지 않고 설정 다시 읽어 들이기</a></li>
 </ul>
 </li>
-<li><a href="#org9cec937">관련된 글들</a></li>
+<li><a href="#org577ec51">관련된 글들</a></li>
 </ul>
 </div>
 </div>
@@ -95,9 +92,9 @@ Tmux 는 터미널 멀티플렉서라고 불리는 도구다.
 비슷하면서도 원조 격인 <code>screen</code> 이라는 도구에 영향을 많이 받은 것으로 보인다.
 </p>
 
-<div id="outline-container-orgafc0bfd" class="outline-2">
-<h2 id="orgafc0bfd">사용법</h2>
-<div class="outline-text-2" id="text-orgafc0bfd">
+<div id="outline-container-org7588c6b" class="outline-2">
+<h2 id="org7588c6b">사용법</h2>
+<div class="outline-text-2" id="text-org7588c6b">
 <p>
 그냥 실행시키면 실행은 된다.
 </p>
@@ -123,16 +120,16 @@ Tmux 는 터미널 멀티플렉서라고 불리는 도구다.
 </div>
 </div>
 </div>
-<div id="outline-container-org8ee2965" class="outline-2">
-<h2 id="org8ee2965">설정 방법</h2>
-<div class="outline-text-2" id="text-org8ee2965">
+<div id="outline-container-orgab81c41" class="outline-2">
+<h2 id="orgab81c41">설정 방법</h2>
+<div class="outline-text-2" id="text-orgab81c41">
 <p>
 <code>~/.tmux.conf</code> 파일에 원하는 설정을 기록할 수 있다.
 </p>
 </div>
-<div id="outline-container-org58725f4" class="outline-3">
-<h3 id="org58725f4">리더 키(Prefix) 변경하기</h3>
-<div class="outline-text-3" id="text-org58725f4">
+<div id="outline-container-orgca92a1a" class="outline-3">
+<h3 id="orgca92a1a">리더 키(Prefix) 변경하기</h3>
+<div class="outline-text-3" id="text-orgca92a1a">
 <p>
 기본 리더키는 <code>^b</code> (Ctrl-B)로 설정되어 있다.
 이걸 바꾸려면, 예를 들어 리더 키를 <code>^\</code> 로 바꾸려면
@@ -162,9 +159,9 @@ set-option -g prefix2 C-']'
 </div>
 </div>
 </div>
-<div id="outline-container-org28aee58" class="outline-2">
-<h2 id="org28aee58">단축키</h2>
-<div class="outline-text-2" id="text-org28aee58">
+<div id="outline-container-org2f84f19" class="outline-2">
+<h2 id="org2f84f19">단축키</h2>
+<div class="outline-text-2" id="text-org2f84f19">
 <p>
 아래에 언급하는 모든 단축키는 리더 키(Prefix)를 먼저 누른 후 눌러야 한다.
 참고로 리더 키는 앞서 언급한 대로
@@ -187,13 +184,13 @@ set-option -g prefix2 C-']'
 </dl>
 </div>
 </div>
-<div id="outline-container-org05dd190" class="outline-2">
-<h2 id="org05dd190">기타 팁</h2>
-<div class="outline-text-2" id="text-org05dd190">
+<div id="outline-container-orgeb16790" class="outline-2">
+<h2 id="orgeb16790">기타 팁</h2>
+<div class="outline-text-2" id="text-orgeb16790">
 </div>
-<div id="outline-container-org27af876" class="outline-3">
-<h3 id="org27af876">선택 영역 복사하기</h3>
-<div class="outline-text-3" id="text-org27af876">
+<div id="outline-container-org54f8aed" class="outline-3">
+<h3 id="org54f8aed">선택 영역 복사하기</h3>
+<div class="outline-text-3" id="text-org54f8aed">
 <p>
 마우스로 드래그 해서 <code>^C</code> 혹은 Command-C 를 눌렀는데 복사가 안 된다면
 <code>^W</code> (Ctrl+W)를 눌러보자.
@@ -207,9 +204,9 @@ set-option -g prefix2 C-']'
 </p>
 </div>
 </div>
-<div id="outline-container-org1b1f24e" class="outline-3">
-<h3 id="org1b1f24e">종료하지 않고 설정 다시 읽어 들이기</h3>
-<div class="outline-text-3" id="text-org1b1f24e">
+<div id="outline-container-orgfb692f2" class="outline-3">
+<h3 id="orgfb692f2">종료하지 않고 설정 다시 읽어 들이기</h3>
+<div class="outline-text-3" id="text-orgfb692f2">
 <p>
 tmux를 종료하지 않고 바꾼 설정을 적용하고 싶다면
 리더 키(Prefix)를 누르고 아래 커맨드를 입력해 보자.
@@ -237,9 +234,9 @@ tmux를 종료하지 않고 바꾼 설정을 적용하고 싶다면
 </div>
 </div>
 </div>
-<div id="outline-container-org9cec937" class="outline-2">
-<h2 id="org9cec937">관련된 글들</h2>
-<div class="outline-text-2" id="text-org9cec937">
+<div id="outline-container-org577ec51" class="outline-2">
+<h2 id="org577ec51">관련된 글들</h2>
+<div class="outline-text-2" id="text-org577ec51">
 <ul class="org-ul">
 <li><a target="_blank" href="https://github.com/gpakosz/.tmux">🌏🇫🇷 Oh My Tmux! Pretty &amp; versatile tmux configuration</a>:
 잘 만들어진 설정을 공유하고 있으며 그대로 쓰기에도 괜찮고
@@ -254,9 +251,6 @@ tmux를 종료하지 않고 바꾼 설정을 적용하고 싶다면
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
@@ -276,9 +270,6 @@ tmux를 종료하지 않고 바꾼 설정을 적용하고 싶다면
      data-ad-slot="4306465772"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </div>
 <div class="content-container">
@@ -298,5 +289,10 @@ gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  var elements = document.getElementsByClassName('adsbygoogle');
+  Array.prototype.forEach.call(elements, function(e) {
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  })</script>
 </body>
 </html>
